--- a/index.html
+++ b/index.html
@@ -1,35 +1,199 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <title>Théo Richard</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <style>
-    body {
-      max-width: 720px;
-      margin: 4rem auto;
-      padding: 0 1.2rem;
-      font-family: system-ui, -apple-system, sans-serif;
-      line-height: 1.6;
-      color: #111;
-      background: #fff;
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Théo Richard</title>
+
+<!-- Google Fonts élégantes et sobres -->
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@600;800&family=Cormorant+Garamond:wght@400;500&display=swap" rel="stylesheet">
+
+<style>
+body {
+    margin: 0;
+    background: #ffffff;
+    color: #111;
+    font-family: 'Cormorant Garamond', serif;
+}
+
+/* PAGE D'ACCUEIL */
+
+.hero {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.hero h1 {
+    font-family: 'Inter', sans-serif;
+    font-size: 5rem;
+    font-weight: 800;
+    letter-spacing: -1px;
+    margin: 0 0 3rem 0;
+}
+
+.main-nav {
+    display: flex;
+    gap: 4rem;
+    font-size: 1.6rem;
+}
+
+.main-nav a {
+    text-decoration: none;
+    color: #111;
+    transition: opacity 0.2s ease;
+}
+
+.main-nav a:hover {
+    opacity: 0.6;
+}
+
+/* SECTION PHOTOGRAPHIE */
+
+.photographie-container {
+    display: flex;
+    max-width: 1400px;
+    margin: 4rem auto;
+    padding: 0 2rem;
+}
+
+/* MENU CHAPITRES DROITE */
+
+.chapter-nav {
+    width: 220px;
+    position: sticky;
+    top: 2rem;
+    align-self: flex-start;
+    font-size: 1rem;
+}
+
+.chapter-nav a {
+    display: block;
+    margin-bottom: 1rem;
+    text-decoration: none;
+    color: #111;
+    opacity: 0.6;
+}
+
+.chapter-nav a:hover {
+    opacity: 1;
+}
+
+/* CONTENU PHOTOS */
+
+.photo-content {
+    flex: 1;
+    padding-right: 4rem;
+}
+
+.photo-section {
+    margin-bottom: 6rem;
+}
+
+.photo-section h2 {
+    font-family: 'Inter', sans-serif;
+    font-size: 1.5rem;
+    margin-bottom: 2rem;
+}
+
+.photo-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1.5rem;
+}
+
+.photo-grid img {
+    width: 100%;
+    display: block;
+    filter: grayscale(100%);
+    transition: filter 0.3s ease;
+}
+
+.photo-grid img:hover {
+    filter: grayscale(0%);
+}
+
+/* RESPONSIVE */
+
+@media (max-width: 900px) {
+    .photographie-container {
+        flex-direction: column;
     }
-    h1 {
-      font-size: 2.6rem;
-      margin-bottom: 1rem;
+
+    .chapter-nav {
+        width: 100%;
+        margin-bottom: 3rem;
+        position: relative;
     }
-    p {
-      margin-bottom: 1rem;
+
+    .photo-grid {
+        grid-template-columns: repeat(2, 1fr);
     }
-  </style>
+}
+
+@media (max-width: 600px) {
+    .photo-grid {
+        grid-template-columns: 1fr;
+    }
+}
+</style>
 </head>
+
 <body>
 
-<h1>Théo Richard</h1>
+<!-- PAGE D'ACCUEIL -->
 
-<p>Photographie · écriture · projets personnels</p>
+<section class="hero">
+    <h1>Théo Richard</h1>
+    <nav class="main-nav">
+        <a href="#photographie">Photographie</a>
+        <a href="#">Écriture</a>
+        <a href="#">Archive</a>
+        <a href="#">Contact</a>
+    </nav>
+</section>
 
-<p>Portfolio en construction.</p>
+<!-- PAGE PHOTOGRAPHIE -->
+
+<section id="photographie" class="photographie-container">
+
+    <div class="photo-content">
+
+        <div class="photo-section" id="serie1">
+            <h2>Série I — Noir urbain</h2>
+            <div class="photo-grid">
+                <img src="https://picsum.photos/600/800?random=1">
+                <img src="https://picsum.photos/600/800?random=2">
+                <img src="https://picsum.photos/600/800?random=3">
+                <img src="https://picsum.photos/600/800?random=4">
+                <img src="https://picsum.photos/600/800?random=5">
+                <img src="https://picsum.photos/600/800?random=6">
+            </div>
+        </div>
+
+        <div class="photo-section" id="serie2">
+            <h2>Série II — Silences</h2>
+            <div class="photo-grid">
+                <img src="https://picsum.photos/600/800?random=7">
+                <img src="https://picsum.photos/600/800?random=8">
+                <img src="https://picsum.photos/600/800?random=9">
+                <img src="https://picsum.photos/600/800?random=10">
+                <img src="https://picsum.photos/600/800?random=11">
+                <img src="https://picsum.photos/600/800?random=12">
+            </div>
+        </div>
+
+    </div>
+
+    <aside class="chapter-nav">
+        <a href="#serie1">Série I — Noir urbain</a>
+        <a href="#serie2">Série II — Silences</a>
+    </aside>
+
+</section>
 
 </body>
 </html>
