--- a/ecriture.html
+++ b/ecriture.html
@@ -95,7 +95,15 @@ body {
 <body>
 
 <div class="top-bar">
-    <a class="home-link" href="index.html">⌂</a>
+    <div class="nav-left">
+        <a class="home-link" href="index.html">⌂</a>
+    </div>
+    <div class="nav-right">
+        <a href="photographie.html">Photographie</a>
+        <a href="ecriture.html">Écriture</a>
+        <a href="archive.html">Archive</a>
+        <a href="contact.html">Contact</a>
+    </div>
 </div>
 
 <div class="container">
