--- a/index.html
+++ b/index.html
@@ -5,23 +5,22 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Théo Richard</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&family=Libre+Baskerville:wght@400;700&display=swap" rel="stylesheet">
-
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Libre+Baskerville:wght@400;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
-
 </head>
 
 <body>
 
-<section class="hero">
-    <h1>Théo Richard</h1>
-    <nav class="main-nav">
+<div class="hero">
+    <h1>THÉO RICHARD</h1>
+
+    <div class="sections">
         <a href="photographie.html">Photographie</a>
         <a href="ecriture.html">Écriture</a>
         <a href="archive.html">Archive</a>
         <a href="contact.html">Contact</a>
-    </nav>
-</section>
+    </div>
+</div>
 
 </body>
 </html>
