--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ body {
 .hero {
     height: 100vh;
     display: flex;
-    flex-direction: column;
+    flex-direction: line;
     justify-content: center;
     align-items: center;
     text-align: center;
