Refactor navigation structure in photographie.html

--- a/photographie.html
+++ b/photographie.html
@@ -11,13 +11,19 @@
 
 <body>
 
-<div class="top-bar">
-    <a class="nav-item" href="index.html">⌂<span>Accueil</span></a>
-    <a class="nav-item" href="photographie.html">📷<span>Photographie</span></a>
-    <a class="nav-item" href="ecriture.html">✒<span>Écriture</span></a>
-    <a class="nav-item" href="archive.html">🗂<span>Archive</span></a>
-    <a class="nav-item" href="contact.html">@<span>Contact</span></a>
-</div>
+<header class="site-header">
+
+    <a href="index.html" class="home-button">INDEX</a>
+
+    <nav class="top-bar">
+        <a class="nav-item" href="photographie.html">PHOTOGRAPHIE</a>
+        <a class="nav-item" href="ecriture.html">ÉCRITURE</a>
+        <a class="nav-item" href="archive.html">ARCHIVE</a>
+        <a class="nav-item" href="contact.html">CONTACT</a>
+    </nav>
+
+</header>
+
 
 <div class="photo-container">
 
