--- a/photographie.html
+++ b/photographie.html
@@ -7,6 +7,8 @@
 <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500&family=Oswald:wght@500;700&display=swap" rel="stylesheet">
 
 <link rel="stylesheet" href="style.css">
+    
+<div class="page-wrapper">
 </head>
 
 <body>
@@ -47,6 +49,6 @@
 </div>
 
 </div>
-
+</div>
 </body>
 </html>
