Update home button text in photographie.html

--- a/photographie.html
+++ b/photographie.html
@@ -15,7 +15,7 @@
 <div class="page-wrapper">
 
     <header class="site-header">
-        <a href="index.html" class="home-button">INDEX</a>
+        <a href="index.html" class="home-button"><strong>RICHARD</strong></a>
 
         <nav class="top-bar">
             <a class="nav-item" href="photographie.html">PHOTOGRAPHIE</a>
