--- a/photographie.html
+++ b/photographie.html
@@ -17,6 +17,7 @@
 
 <div class="page-wrapper">
 
+    <!-- HEADER / NAV -->
     <header class="site-header">
         <a href="index.html" class="home-button"><strong>RICHARD</strong></a>
 
@@ -28,22 +29,28 @@
         </nav>
     </header>
 
+    <!-- CONTENU PHOTOS -->
     <div class="photo-container">
 
         <div class="photo-grid">
 
+            <!-- Section Urbain -->
             <h2 id="urbain">Urbain</h2>
             <img src="https://picsum.photos/400/500?1">
             <img src="https://picsum.photos/400/500?2">
             <img src="https://picsum.photos/400/500?3">
+            <img src="https://picsum.photos/400/500?7">
 
+            <!-- Section Portraits -->
             <h2 id="portraits">Portraits</h2>
             <img src="https://picsum.photos/400/500?4">
             <img src="https://picsum.photos/400/500?5">
             <img src="https://picsum.photos/400/500?6">
+            <img src="https://picsum.photos/400/500?8">
 
         </div>
 
+        <!-- Menu photo à droite -->
         <div class="photo-menu">
             <a href="#urbain">Urbain</a>
             <a href="#portraits">Portraits</a>
