--- a/archive.html
+++ b/archive.html
@@ -1,29 +1,80 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Archive — Théo Richard</title>
-<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500&family=Oswald:wght@500;700&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Page en construction — Théo Richard</title>
 
+    <!-- Police -->
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500&display=swap" rel="stylesheet">
 
-<link rel="stylesheet" href="style.css">
+    <style>
+        /* Reset */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-family: 'IBM Plex Mono', monospace;
+            background-color: #ffffff;
+            color: #111111;
+            text-align: center;
+            padding: 2rem;
+        }
+
+        .construction {
+            max-width: 600px;
+        }
+
+        .construction h1 {
+            font-size: 2.5rem;
+            margin-bottom: 1.5rem;
+            letter-spacing: 0.05em;
+        }
+
+        .construction p {
+            font-size: 1.2rem;
+            opacity: 0.8;
+            margin-bottom: 1rem;
+            line-height: 1.6;
+        }
+
+        .construction a {
+            color: #111111;
+            text-decoration: none;
+            font-weight: 500;
+            border-bottom: 1px dotted #111111;
+        }
+
+        .construction a:hover {
+            opacity: 0.6;
+        }
+
+        @media (max-width: 600px) {
+            .construction h1 {
+                font-size: 2rem;
+            }
+
+            .construction p {
+                font-size: 1rem;
+            }
+        }
+    </style>
 </head>
 
 <body>
-
-<div class="top-bar">
-    <a class="nav-item" href="index.html">⌂<span>Accueil</span></a>
-    <a class="nav-item" href="photographie.html">📷<span>Photographie</span></a>
-    <a class="nav-item" href="ecriture.html">✒<span>Écriture</span></a>
-    <a class="nav-item" href="archive.html">🗂<span>Archive</span></a>
-    <a class="nav-item" href="contact.html">@<span>Contact</span></a>
-</div>
-
-<div class="center-links">
-<a href="#">Archives photo</a>
-<a href="#">Archives texte</a>
-</div>
-
+    <div class="construction">
+        <h1>Page en construction</h1>
+        <p>Cette page n'est pas encore disponible.</p>
+        <p>Pour plus d'informations, contactez-moi : <a href="mailto:contact@theo-richard.fr">contact@theo-richard.fr</a></p>
+    </div>
 </body>
+
 </html>
