--- a/archive.html
+++ b/archive.html
@@ -57,6 +57,26 @@
             opacity: 0.6;
         }
 
+        /* Bouton retour accueil */
+        .home-button {
+            display: inline-block;
+            margin-top: 2rem;
+            padding: 0.8rem 2rem;
+            font-family: 'IBM Plex Mono', monospace;
+            font-weight: 500;
+            font-size: 1rem;
+            color: #ffffff;
+            background-color: #111111;
+            text-decoration: none;
+            border-radius: 4px;
+            transition: opacity 0.3s ease, transform 0.2s ease;
+        }
+
+        .home-button:hover {
+            opacity: 0.8;
+            transform: translateY(-2px);
+        }
+
         @media (max-width: 600px) {
             .construction h1 {
                 font-size: 2rem;
@@ -74,6 +94,7 @@
         <h1>Page en construction</h1>
         <p>Cette page n'est pas encore disponible.</p>
         <p>Pour plus d'informations, contactez-moi : <a href="mailto:contact@theo-richard.fr">contact@theo-richard.fr</a></p>
+        <a href="index.html" class="home-button">Retour à l’accueil</a>
     </div>
 </body>
 
