--- a/archive.html
+++ b/archive.html
@@ -57,22 +57,22 @@
             opacity: 0.6;
         }
 
-        /* Bouton retour accueil */
-        .home-button {
+        /* Bouton retour accueil spécifique à la page en construction */
+        .construction-home-button {
             display: inline-block;
             margin-top: 2rem;
             padding: 0.8rem 2rem;
             font-family: 'IBM Plex Mono', monospace;
             font-weight: 500;
             font-size: 1rem;
-            color: #ffffff;
-            background-color: #111111;
+            color: #ffffff;             /* texte blanc */
+            background-color: #111111;  /* fond noir */
             text-decoration: none;
             border-radius: 4px;
             transition: opacity 0.3s ease, transform 0.2s ease;
         }
 
-        .home-button:hover {
+        .construction-home-button:hover {
             opacity: 0.8;
             transform: translateY(-2px);
         }
@@ -94,7 +94,7 @@
         <h1>Page en construction</h1>
         <p>Cette page n'est pas encore disponible.</p>
         <p>Pour plus d'informations, contactez-moi : <a href="mailto:contact@theo-richard.fr">contact@theo-richard.fr</a></p>
-        <a href="index.html" class="home-button">Retour à l’accueil</a>
+        <a href="index.html" class="construction-home-button">Retour à l’accueil</a>
     </div>
 </body>
 
