--- a/index.html
+++ b/index.html
@@ -9,17 +9,20 @@
 </head>
 
 <body>
+    <div class="page-wrapper">
+        <div class="hero">
+            <h1>THÉO RICHARD</h1>
 
-<div class="hero">
-    <h1>THÉO RICHARD</h1>
-
-    <div class="sections">
-        <a href="photographie.html">Photographie</a>
-        <a href="ecriture.html">Écriture</a>
-        <a href="archive.html">Archive</a>
-        <a href="contact.html">Contact</a>
+            <div class="sections">
+                <a href="photographie.html">Photographie</a>
+                <a href="ecriture.html">Écriture</a>
+                <a href="archive.html">Archive</a>
+                <a href="contact.html">Contact</a>
+            </div>
+        </div>
     </div>
-</div>
+</body>
+
 
 </body>
 </html>
