--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <!-- HEADER / NAV -->
         <header class="site-header">
-            <a href="index.html" class="home-button"><strong>RICHARD</strong></a>
+            <a href="index.html" class="home-button"><strong></strong></a>
 
             <nav class="top-bar">
                 <a class="nav-item" href="photographie.html">PHOTOGRAPHIE</a>
@@ -32,12 +32,6 @@
         <div class="hero">
             <h1>THÉO RICHARD</h1>
 
-            <div class="sections">
-                <a href="photographie.html">Photographie</a>
-                <a href="ecriture.html">Écriture</a>
-                <a href="archive.html">Archive</a>
-                <a href="contact.html">Contact</a>
-            </div>
         </div>
 
     </div>
