--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <!-- HEADER / NAV -->
         <header class="site-header">
-            <a href="index.html" class="home-button"><strong></strong></a>
+            <a href="index.html" class="home-button"><strong>THÉO RICHARD</strong></a>
 
             <nav class="top-bar">
                 <a class="nav-item" href="photographie.html">PHOTOGRAPHIE</a>
@@ -28,8 +28,8 @@
             </nav>
         </header>
 
-        <!-- HERO -->
-        <div class="hero">
+        <!-- HERO INDEX -->
+        <div class="hero-index">
             <h1>THÉO RICHARD</h1>
         </div>
 
