--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <!-- HEADER / NAV -->
         <header class="site-header">
-            <a href="index.html" class="hero-index"><strong>THÉO RICHARD</strong></a>
+            <a href="index.html" class="home-button"><strong>RETOUR À L'INDEX</strong></a>
 
             <nav class="top-bar">
                 <a class="nav-item" href="photographie.html">PHOTOGRAPHIE</a>
@@ -30,7 +30,7 @@
 
         <!-- HERO INDEX -->
         <div class="hero-index">
-            <h1></h1>
+            <h1>THÉO RICHARD</h1>
         </div>
 
     </div>
