--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <!-- HEADER / NAV -->
         <header class="site-header">
-            <a href="index.html" class="home-button"><strong>RETOUR À L'INDEX</strong></a>
+            <a href="index.html" class="home-button">⌂</a>
 
             <nav class="top-bar">
                 <a class="nav-item" href="photographie.html">PHOTOGRAPHIE</a>
