--- a/photographie.html
+++ b/photographie.html
@@ -19,7 +19,7 @@
 
     <!-- HEADER / NAV -->
     <header class="site-header">
-        <a href="index.html" class="home-button"><strong>RICHARD</strong></a>
+        <a href="index.html" class="home-button"><strong>⌂</strong></a>
 
         <nav class="top-bar">
             <a class="nav-item" href="photographie.html">PHOTOGRAPHIE</a>
