--- a/archive.html
+++ b/archive.html
@@ -88,13 +88,12 @@
         }
     </style>
 </head>
-
 <body>
-    <div class="construction">
+    <div class="construction-container">
         <h1>Page en construction</h1>
         <p>Cette page n'est pas encore disponible.</p>
-        <p>Pour plus d'informations, contactez-moi : <a href="mailto:contact@theo-richard.fr">contact@theo-richard.fr</a></p>
-        <a href="index.html" class="construction-home-button">Retour à l’accueil</a>
+        <p>Pour plus d’informations, contactez-moi : <a href="mailto:contact@theo-richard.fr">contact@theo-richard.fr</a></p>
+        <a href="index.html" class="construction-home-button">Retour à l'accueil</a>
     </div>
 </body>
 
