--- a/ecriture.html
+++ b/ecriture.html
@@ -62,7 +62,8 @@
 
 <body>
     <div class="construction-container">
-        <h1>Page en construction</h1>
+        <h1>Page en construction</h1><br>
+        <p>Cette page n'est pas encore disponible</p>
         <p>Pour plus d’informations : <a href="mailto:contact@theo-richard.fr">contact@theo-richard.fr</a></p>
         <a href="index.html" class="construction-home-button">Retour à l'accueil</a>
     </div>
