--- a/archive.html
+++ b/archive.html
@@ -4,69 +4,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Page en construction — Théo Richard</title>
+    <title>Écriture — Théo Richard</title>
 
-    <!-- Police -->
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500&display=swap" rel="stylesheet">
+    <!-- Polices -->
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500&family=Archivo+Black&display=swap" rel="stylesheet">
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="style.css">
 
     <style>
-        /* Reset */
-        * {
+        /* Styles spécifiques pour page en construction */
+        body, html {
+            height: 100%;
             margin: 0;
-            padding: 0;
-            box-sizing: border-box;
         }
 
-        body {
-            height: 100vh;
+        .construction-container {
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
-            font-family: 'IBM Plex Mono', monospace;
-            background-color: #ffffff;
-            color: #111111;
             text-align: center;
-            padding: 2rem;
+            height: 100%;
+            font-family: 'IBM Plex Mono', monospace;
+            padding: 0 2rem;
         }
 
-        .construction {
-            max-width: 600px;
-        }
-
-        .construction h1 {
+        .construction-container h1 {
             font-size: 2.5rem;
             margin-bottom: 1.5rem;
-            letter-spacing: 0.05em;
         }
 
-        .construction p {
+        .construction-container p {
             font-size: 1.2rem;
-            opacity: 0.8;
-            margin-bottom: 1rem;
-            line-height: 1.6;
+            margin-bottom: 2rem;
         }
 
-        .construction a {
-            color: #111111;
-            text-decoration: none;
-            font-weight: 500;
-            border-bottom: 1px dotted #111111;
-        }
-
-        .construction a:hover {
-            opacity: 0.6;
-        }
-
-        /* Bouton retour accueil spécifique à la page en construction */
         .construction-home-button {
             display: inline-block;
-            margin-top: 2rem;
             padding: 0.8rem 2rem;
             font-family: 'IBM Plex Mono', monospace;
             font-weight: 500;
             font-size: 1rem;
-            color: #ffffff;             /* texte blanc */
-            background-color: #111111;  /* fond noir */
+            color: #ffffff;
+            background-color: #111111;
             text-decoration: none;
             border-radius: 4px;
             transition: opacity 0.3s ease, transform 0.2s ease;
@@ -76,23 +57,14 @@
             opacity: 0.8;
             transform: translateY(-2px);
         }
-
-        @media (max-width: 600px) {
-            .construction h1 {
-                font-size: 2rem;
-            }
-
-            .construction p {
-                font-size: 1rem;
-            }
-        }
     </style>
 </head>
+
 <body>
     <div class="construction-container">
         <h1>Page en construction</h1>
-        <p>Cette page n'est pas encore disponible.</p>
-        <p>Pour plus d’informations, contactez-moi : <a href="mailto:contact@theo-richard.fr">contact@theo-richard.fr</a></p>
+        <p>Cette page n'est pas encore disponible</p>
+        <p>Pour plus d’informations : <a href="mailto:contact@theo-richard.fr">contact@theo-richard.fr</a></p>
         <a href="index.html" class="construction-home-button">Retour à l'accueil</a>
     </div>
 </body>
