--- a/ecriture.html
+++ b/ecriture.html
@@ -11,57 +11,10 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="style.css">
-
-    <style>
-        /* Styles spécifiques page construction */
-        body, html {
-            height: 100%;
-            margin: 0;
-        }
-
-        .construction-container {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-            font-family: 'IBM Plex Mono', monospace;
-            padding: 2rem;
-            min-height: calc(100vh - 120px); /* ajusté pour laisser place au header */
-        }
-
-        .construction-container h1 {
-            font-size: 2.5rem;
-            margin-bottom: 1.5rem;
-        }
-
-        .construction-container p {
-            font-size: 1.2rem;
-            margin-bottom: 2rem;
-        }
-
-        .construction-home-button {
-            display: inline-block;
-            padding: 0.8rem 2rem;
-            font-family: 'IBM Plex Mono', monospace;
-            font-weight: 500;
-            font-size: 1rem;
-            color: #ffffff;
-            background-color: #111111;
-            text-decoration: none;
-            border-radius: 4px;
-            transition: opacity 0.3s ease, transform 0.2s ease;
-        }
-
-        .construction-home-button:hover {
-            opacity: 0.8;
-            transform: translateY(-2px);
-        }
-    </style>
 </head>
 
 <body>
-    <div class="page-wrapper">
+    <div class="page-wrapper construction-page">
 
         <!-- HEADER / NAV -->
         <header class="site-header">
