--- a/archive.html
+++ b/archive.html
@@ -31,7 +31,7 @@
         <!-- CONTENU PAGE EN CONSTRUCTION -->
         <div class="construction-container">
             <h1>Page en construction</h1>
-            <p>J'ai encore rien à archiver ici, mais garde un oeil dessus, on ne sait jamais</p>
+            <p>J'ai encore rien à archiver ici, mais garde un oeil dessus, on ne sait jamais.</p>
             <p>Pour plus d’informations : <a href="mailto:contact@theo-richard.fr">contact@theo-richard.fr</a></p>
             <a href="index.html" class="construction-home-button">Retour à l'accueil</a>
         </div>
