--- a/photographie.html
+++ b/photographie.html
@@ -7,56 +7,55 @@
     <title>Photographie — Théo Richard</title>
 
     <!-- Polices -->
-    <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=IBM+Plex+Mono:wght@400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500&family=Archivo+Black&family=Playfair+Display:wght@800&display=swap" rel="stylesheet">
 
-    <!-- CSS principal -->
+    <!-- CSS -->
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <div class="page-wrapper">
 
-<div class="page-wrapper">
+        <!-- HEADER / NAV FIXE -->
+        <header class="site-header">
+            <a href="index.html" class="home-button">⌂</a>
 
-    <!-- HEADER / NAV -->
-    <header class="site-header">
-        <a href="index.html" class="home-button"><strong>⌂</strong></a>
+            <nav class="top-bar">
+                <a class="nav-item" href="photographie.html">PHOTOGRAPHIE</a>
+                <a class="nav-item" href="ecriture.html">ÉCRITURE</a>
+                <a class="nav-item" href="archive.html">ARCHIVE</a>
+                <a class="nav-item" href="contact.html">CONTACT</a>
+            </nav>
+        </header>
 
-        <nav class="top-bar">
-            <a class="nav-item" href="photographie.html">PHOTOGRAPHIE</a>
-            <a class="nav-item" href="ecriture.html">ÉCRITURE</a>
-            <a class="nav-item" href="archive.html">ARCHIVE</a>
-            <a class="nav-item" href="contact.html">CONTACT</a>
-        </nav>
-    </header>
+        <!-- PHOTOGRAPHIE -->
+        <div class="photo-container">
 
-    <!-- CONTENU PHOTOS -->
-    <div class="photo-container">
+            <!-- Grille de photos -->
+            <div class="photo-grid">
 
-    <div class="photo-grid">
+                <h2 id="urbain">Urbain</h2>
+                <img src="https://picsum.photos/400/500?1">
+                <img src="https://picsum.photos/400/500?2">
+                <img src="https://picsum.photos/400/500?3">
+                <img src="https://picsum.photos/400/500?4">
 
-        <h2 id="urbain">Urbain</h2>
-        <img src="https://picsum.photos/400/500?1">
-        <img src="https://picsum.photos/400/500?2">
-        <img src="https://picsum.photos/400/500?3">
-        <img src="https://picsum.photos/400/500?7">
+                <h2 id="portraits">Portraits</h2>
+                <img src="https://picsum.photos/400/500?5">
+                <img src="https://picsum.photos/400/500?6">
+                <img src="https://picsum.photos/400/500?7">
+                <img src="https://picsum.photos/400/500?8">
 
-        <h2 id="portraits">Portraits</h2>
-        <img src="https://picsum.photos/400/500?4">
-        <img src="https://picsum.photos/400/500?5">
-        <img src="https://picsum.photos/400/500?6">
-        <img src="https://picsum.photos/400/500?8">
+            </div>
+
+            <!-- Menu des sections -->
+            <div class="photo-menu">
+                <a href="#urbain">Urbain</a>
+                <a href="#portraits">Portraits</a>
+            </div>
+
+        </div>
 
     </div>
-
-    <div class="photo-menu">
-        <a href="#urbain">Urbain</a>
-        <a href="#portraits">Portraits</a>
-    </div>
-
-</div>
-
-
-</div>
-
 </body>
 </html>
