--- a/ecriture.html
+++ b/ecriture.html
@@ -26,6 +26,7 @@
 
         <div class="construction-container">
             <h1>Page en construction</h1>
+            <p>Oui, oui, ca vient, c'est pas la course non plus, je suis photographe moi, pasu auteur !</p>
             <p>Pour plus d’informations : <a href="mailto:contact@theo-richard.fr">contact@theo-richard.fr</a></p>
             <a href="index.html" class="construction-home-button">Retour à l'accueil</a>
         </div>
