--- a/contact.html
+++ b/contact.html
@@ -26,6 +26,7 @@
 
         <div class="construction-container">
             <h1>Page en construction</h1>
+            <p>Je vais pas rajouter beaucoup plus que le mail. Peut être instagram, mais ç'est de là que tu viens, non ? Allez, pour le plaisir :<a href="https://www.instagram.com/the0_richard/">@the0_richard</a>
             <p>Pour plus d’informations : <a href="mailto:contact@theo-richard.fr">contact@theo-richard.fr</a></p>
             <a href="index.html" class="construction-home-button">Retour à l'accueil</a>
         </div>
