--- a/archive.html
+++ b/archive.html
@@ -26,6 +26,7 @@
 
         <div class="construction-container">
             <h1>Page en construction</h1>
+            <p>J'ai rien à archiver, c'est pas ma priorité ! Tu veux cacher des docuements ? Alors envoie-les moi, je les mettrai là.
             <p>Pour plus d’informations : <a href="mailto:contact@theo-richard.fr">contact@theo-richard.fr</a></p>
             <a href="index.html" class="construction-home-button">Retour à l'accueil</a>
         </div>
