--- a/photographie.html
+++ b/photographie.html
@@ -2,60 +2,51 @@
 <html lang="fr">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Photographie — Théo Richard</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Photographie — Théo Richard</title>
 
-    <!-- Polices -->
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500&family=Archivo+Black&family=Playfair+Display:wght@800&display=swap" rel="stylesheet">
-
-    <!-- CSS -->
-    <link rel="stylesheet" href="style.css">
+<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500&family=Outfit:wght@900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div class="page-wrapper">
+<div class="page-wrapper">
 
-        <!-- HEADER / NAV FIXE -->
-        <header class="site-header">
-            <a href="index.html" class="home-button">⌂</a>
+<header class="site-header">
+    <a href="index.html" class="home-button">⌂</a>
+    <nav class="top-bar">
+        <a href="photographie.html">PHOTOGRAPHIE</a>
+        <a href="ecriture.html">ÉCRITURE</a>
+        <a href="archive.html">ARCHIVE</a>
+        <a href="contact.html">CONTACT</a>
+    </nav>
+</header>
 
-            <nav class="top-bar">
-                <a class="nav-item" href="photographie.html">PHOTOGRAPHIE</a>
-                <a class="nav-item" href="ecriture.html">ÉCRITURE</a>
-                <a class="nav-item" href="archive.html">ARCHIVE</a>
-                <a class="nav-item" href="contact.html">CONTACT</a>
-            </nav>
-        </header>
+<div class="photo-container">
 
-        <!-- PHOTOGRAPHIE -->
-        <div class="photo-container">
+<div class="photo-grid">
 
-            <!-- Grille de photos -->
-            <div class="photo-grid">
+<h2 id="urbain">Urbain</h2>
+<img src="https://picsum.photos/400/500?1">
+<img src="https://picsum.photos/400/500?2">
+<img src="https://picsum.photos/400/500?3">
+<img src="https://picsum.photos/400/500?4">
 
-                <h2 id="urbain">Urbain</h2>
-                <img src="https://picsum.photos/400/500?1">
-                <img src="https://picsum.photos/400/500?2">
-                <img src="https://picsum.photos/400/500?3">
-                <img src="https://picsum.photos/400/500?4">
+<h2 id="portraits">Portraits</h2>
+<img src="https://picsum.photos/400/500?5">
+<img src="https://picsum.photos/400/500?6">
+<img src="https://picsum.photos/400/500?7">
+<img src="https://picsum.photos/400/500?8">
 
-                <h2 id="portraits">Portraits</h2>
-                <img src="https://picsum.photos/400/500?5">
-                <img src="https://picsum.photos/400/500?6">
-                <img src="https://picsum.photos/400/500?7">
-                <img src="https://picsum.photos/400/500?8">
+</div>
 
-            </div>
+<div class="photo-menu">
+<a href="#urbain">Urbain</a>
+<a href="#portraits">Portraits</a>
+</div>
 
-            <!-- Menu des sections -->
-            <div class="photo-menu">
-                <a href="#urbain">Urbain</a>
-                <a href="#portraits">Portraits</a>
-            </div>
-
-        </div>
-
-    </div>
+</div>
+</div>
 </body>
 </html>
