--- a/photographie.html
+++ b/photographie.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Photographie — Théo Richard</title>
 
-    <!-- Outfit 900 -->
+    <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@900&family=IBM+Plex+Mono:wght@400;500&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="style.css">
@@ -28,7 +28,7 @@
 
         <div class="photo-container">
 
-            <!-- MENU GAUCHE -->
+            <!-- MENU -->
             <div class="photo-menu">
                 <a href="#urbain">Urbain</a>
                 <a href="#portraits">Portraits</a>
