--- a/index.html
+++ b/index.html
@@ -2,38 +2,31 @@
 <html lang="fr">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Théo Richard</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Théo Richard</title>
 
-    <!-- Polices -->
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500&family=Archivo+Black&display=swap" rel="stylesheet">
-
-    <!-- CSS -->
-    <link rel="stylesheet" href="style.css">
+<link href="https://fonts.googleapis.com/css2?family=Outfit:wght@900&family=IBM+Plex+Mono:wght@400;500&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div class="page-wrapper">
+<div class="page-wrapper">
 
-        <!-- HEADER / NAV -->
-        <header class="site-header">
-            <a href="index.html" class="home-button">⌂</a>
+<header class="site-header">
+    <a href="index.html" class="home-button">⌂</a>
+    <nav class="top-bar">
+        <a href="photographie.html">PHOTOGRAPHIE</a>
+        <a href="ecriture.html">ÉCRITURE</a>
+        <a href="archive.html">ARCHIVE</a>
+        <a href="contact.html">CONTACT</a>
+    </nav>
+</header>
 
-            <nav class="top-bar">
-                <a class="nav-item" href="photographie.html">PHOTOGRAPHIE</a>
-                <a class="nav-item" href="ecriture.html">ÉCRITURE</a>
-                <a class="nav-item" href="archive.html">ARCHIVE</a>
-                <a class="nav-item" href="contact.html">CONTACT</a>
-            </nav>
-        </header>
+<div class="hero-index">
+    <h1>THÉO RICHARD</h1>
+</div>
 
-        <!-- HERO INDEX -->
-        <div class="hero-index">
-            <h1>THÉO RICHARD</h1>
-        </div>
-
-    </div>
+</div>
 </body>
-
 </html>
