--- a/ecriture.html
+++ b/ecriture.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Écriture — Théo Richard</title>
 
-<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500&family=Outfit:wght@900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Outfit:wght@900&family=IBM+Plex+Mono:wght@400;500&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
 </head>
 
@@ -24,7 +24,7 @@
 </header>
 
 <div class="construction-container">
-<h1>Page en construction</h1>
+<h1>PAGE EN CONSTRUCTION</h1>
 <p>Oui, oui, ça vient. Je suis photographe moi.</p>
 <p>Pour plus d’informations : contact@theo-richard.fr</p>
 <a href="index.html" class="construction-home-button">Retour à l'accueil</a>
