--- a/archive.html
+++ b/archive.html
@@ -2,36 +2,34 @@
 <html lang="fr">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Archive — Théo Richard</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Archive — Théo Richard</title>
 
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500&family=Archivo+Black&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+<link href="https://fonts.googleapis.com/css2?family=Outfit:wght@900&family=IBM+Plex+Mono:wght@400;500&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div class="page-wrapper construction-page">
+<div class="page-wrapper">
 
-        <header class="site-header">
-            <a href="index.html" class="home-button">⌂</a>
+<header class="site-header">
+    <a href="index.html" class="home-button">⌂</a>
+    <nav class="top-bar">
+        <a href="photographie.html">PHOTOGRAPHIE</a>
+        <a href="ecriture.html">ÉCRITURE</a>
+        <a href="archive.html">ARCHIVE</a>
+        <a href="contact.html">CONTACT</a>
+    </nav>
+</header>
 
-            <nav class="top-bar">
-                <a class="nav-item" href="photographie.html">PHOTOGRAPHIE</a>
-                <a class="nav-item" href="ecriture.html">ÉCRITURE</a>
-                <a class="nav-item" href="archive.html">ARCHIVE</a>
-                <a class="nav-item" href="contact.html">CONTACT</a>
-            </nav>
-        </header>
+<div class="construction-container">
+<h1>PAGE EN CONSTRUCTION</h1>
+<p>Clairement pas <s>commencée</s> terminée, mais en même temps j'ai rien à archiver. Tu prends un sac quand tu n'as rien à porter ?</p>
+<p>Pour plus d’informations : contact@theo-richard.fr</p>
+<a href="index.html" class="construction-home-button">Retour à l'accueil</a>
+</div>
 
-        <div class="construction-container">
-            <h1>Page en construction</h1>
-            <p>J'ai rien à archiver, c'est pas ma priorité ! Tu veux cacher des docuements ? Alors envoie-les moi, je les mettrai là.
-            <p>Pour plus d’informations : <a href="mailto:contact@theo-richard.fr">contact@theo-richard.fr</a></p>
-            <a href="index.html" class="construction-home-button">Retour à l'accueil</a>
-        </div>
-
-    </div>
+</div>
 </body>
-
 </html>
