--- a/ecriture.html
+++ b/ecriture.html
@@ -25,7 +25,7 @@
 
 <div class="construction-container">
 <h1>PAGE EN CONSTRUCTION</h1>
-<p>Oui, oui, ça vient. Je suis photographe moi.</p>
+<p>Oui, oui, ça vient. Je suis photographe moi, pas auteur ! Ni développeur...</p>
 <p>Pour plus d’informations : contact@theo-richard.fr</p>
 <a href="index.html" class="construction-home-button">Retour à l'accueil</a>
 </div>
