--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,10 @@
 <div class="page-wrapper">
 
 <header class="site-header">
-    <a href="index.html" class="home-button">⌂</a>
+   <a href="index.html" class="home-button">
+        <span class="home-icon">⌂</span>
+        <span class="home-label">ACCUEIL</span>
+    </a>
     <nav class="top-bar">
         <a href="photographie.html">PHOTOGRAPHIE</a>
         <a href="ecriture.html">ÉCRITURE</a>
