--- a/ecriture.html
+++ b/ecriture.html
@@ -14,10 +14,9 @@
 <div class="page-wrapper">
 
 <header class="site-header">
-     <a href="index.html" class="home-button">
-        <span class="home-icon">⌂</span>
-        <span class="home-label">ACCUEIL</span>
-    </a>
+<a href="index.html" class="home-button">
+    ⌂ ACCUEIL
+</a>
     <nav class="top-bar">
         <a href="photographie.html">PHOTOGRAPHIE</a>
         <a href="ecriture.html">ÉCRITURE</a>
