--- a/photographie.html
+++ b/photographie.html
@@ -14,9 +14,8 @@
 <div class="page-wrapper">
 
 <header class="site-header">
-    <a href="index.html" class="home-button">
-    <span class="home-icon">⌂</span>
-    <span class="home-label">ACCUEIL</span>
+<a href="index.html" class="home-button">
+    ⌂ ACCUEIL
 </a>
     <nav class="top-bar">
         <a href="photographie.html">PHOTOGRAPHIE</a>
