--- a/photographie.html
+++ b/photographie.html
@@ -15,8 +15,9 @@
 
 <header class="site-header">
 <a href="index.html" class="home-button">
-    ⌂ ACCUEIL
+    <span class="home-icon">⌂</span> ACCUEIL
 </a>
+
     <nav class="top-bar">
         <a href="photographie.html">PHOTOGRAPHIE</a>
         <a href="ecriture.html">ÉCRITURE</a>
