--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <header class="site-header">
 <a href="index.html" class="home-button">
-    ⌂ ACCUEIL
+    <span class="home-icon">⌂</span> ACCUEIL
 </a>
     <nav class="top-bar">
         <a href="photographie.html">PHOTOGRAPHIE</a>
