--- a/index.html
+++ b/index.html
@@ -26,7 +26,14 @@
 </header>
 
 <div class="hero-index">
-    <h1>THÉO RICHARD</h1>
+    <img src="image/index-1.webp" alt="Autoportrait de Théo Richard">
+    <div class="hero-text">
+        <h1>THÉO RICHARD</h1>
+        <p class="hero-note">
+            Photographe argentique — Site en construction, pour des imformations sur les shootings, développement ou tiage, merci de me contacter par mail : <a href="mailto:contact@theo-richard.fr">contact@theo-richard.fr</a>
+.
+        </p>
+    </div>
 </div>
 
 </div>
