--- a/index.html
+++ b/index.html
@@ -24,14 +24,15 @@
         <a href="contact.html">CONTACT</a>
     </nav>
 </header>
-
+    
 <div class="hero-index">
-    <img src="image/index-1.webp" alt="Autoportrait de Théo Richard">
-    <div class="hero-text">
-        <h1>THÉO RICHARD</h1>
-        <p class="hero-note">
-            Photographe argentique — Site en construction, pour des imformations sur les shootings, développement ou tiage, merci de me contacter par mail : <a href="mailto:contact@theo-richard.fr">contact@theo-richard.fr</a>
-.
+    <h1>THÉO RICHARD</h1>
+    <p class="hero-note">
+        Photographe argentique — Site en construction.<br>
+        Pour les informations sur les shootings, développements ou tiages, merci de me contacter par mail : <a href="mailto:contact@theo-richard.fr">contact@theo-richard.fr</a>.
+    </p>
+</div>
+
         </p>
     </div>
 </div>
