--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 </header>
     
 <div class="hero-index">
-    <h1>THÉO RICHARD</h1>
+    <h1>THÉO RICHARD - Photographie argentique</h1>
     <p class="hero-note">
-        Photographe argentique — Site en construction.<br>
+        Site en construction.<br>
         Pour les informations sur les shootings, développements ou tiages, merci de me contacter par mail : <a href="mailto:contact@theo-richard.fr">contact@theo-richard.fr</a>.
     </p>
 </div>
