--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </header>
     
 <div class="hero-index">
-    <h1>THÉO RICHARD - Photographie argentique</h1>
+    <h1>THÉO RICHARD<br>Photographie argentique</h1>
     <p class="hero-note">
         Site en construction.<br>
         Pour les informations sur les shootings, développements ou tiages, merci de me contacter par mail : <a href="mailto:contact@theo-richard.fr">contact@theo-richard.fr</a>.
